Implement findByName method using Data JPA
