# openapi/openapi.yaml
@@ -6,9 +6,9 @@ servers:
   - url: https://jsonplaceholder.swagger.io/api/v3
 tags:
   - name: jsonplaceholder
+    description: Get all dummy data from jsonplaceholder
+  - name: user
     description: Operations about user
-  - name: todos
-    description: Operations about todos
 paths:
   /jsonplaceholder/users:
     get:
@@ -62,6 +62,40 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Comment'
+  /users/find-all-by-user-name:
+    get:
+      tags:
+        - user
+      summary: Find all users by user name
+      operationId: findAllByUserName
+      parameters:
+        - name: name
+          in: query
+          description: userName
+          required: true
+          schema:
+            type: string
+        - name: pageNum
+          in: query
+          description: pageNumber
+          required: false
+          schema:
+            type: integer
+            default: 0
+        - name: pageSize
+          in: query
+          description: pageSize
+          required: false
+          schema:
+            type: integer
+            default: 10
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
 components:
   schemas:
     User:
